refactor: sprint7 베이스 코드 참고하여 로직개선